# gensync

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Dockerfile  Makefile  Portfile  Portfile.txt  README.md  gensync.tcl
example/: client_params_data.cpisync  server_params_data.cpisync
example/example_params_dir/: client_100_100.cpisync  client_10_10.cpisync  client_20_20.cpisync  client_30_30.cpisync  client_40_40.cpisync  client_50_50.cpisync  client_60_60.cpisync  client_70_70.cpisync  client_80_80.cpisync  client_90_90.cpisync  server_0_0.cpisync  server_100_100.cpisync  server_10_10.cpisync  server_20_20.cpisync  server_30_30.cpisync  server_40_40.cpisync  server_50_50.cpisync  server_60_60.cpisync  server_70_70.cpisync  server_80_80.cpisync  server_90_90.cpisync
include/CPISync/Aux/: Sketches.h  SyncMethod.h
include/CPISync/Benchmarks/: AuxMeasurements.h  BenchObserv.h  BenchParams.h  DataObjectGenerator.h  FromFileGen.h  README.md  RandGen.h
include/CPISync/Syncs/: CPISync.h  CuckooSync.h  GenSync.h  IBLTSetOfSets.h  IBLTSync.h  IBLTSync_Multiset.h  InterCPISync.h
include/GenSync/Aux/: Auxiliary.h  ConstantsAndTypes.h  Exceptions.h  ForkHandle.h  Logger.h  Sketches.h  SyncMethod.h  UID.h
include/GenSync/Benchmarks/: BenchObserv.h  BenchParams.h  DataObjectGenerator.h  FromFileGen.h  RandGen.h
include/GenSync/Communicants/: CommDummy.h  CommSocket.h  CommString.h  Communicant.h
include/GenSync/Data/: DataFileC.h  DataMemC.h  DataObjC.h  DataObject.h  DataPriorityObject.h
include/GenSync/Syncs/: CPISync.h  CPISync_ExistingConnection.h  CPISync_HalfRound.h  CPISync_HalfRound_Hashed.h  CPISync_OneLessRound.h  Compact2DBitArray.h  Cuckoo.h  CuckooSync.h  FullSync.h  GenSync.h  HashSync.h  IBLT.h  IBLTMultiset.h  IBLTSetOfSets.h  IBLTSync.h  IBLTSync_HalfRound.h  IBLTSync_Multiset.h  InterCPISync.h  PrioCPISync.h  ProbCPISync.h
mininet_exec/: README.md  mininet_exec.py
mininet_exec/doc/: cpisync_test.sh
mininet_exec/doc/CPISync/: client_params_data.cpisync  server_params_data.cpisync
run/: QUESTIONS.md  README.md  analysis.ipynb  colosseum_analysis.py  count_common.py  extract_data.py  helper.sh  run_colosseum.sh  run_experiments.sh  ssh-many.sh  start_experiments_at.sh
run/plain_data/: gensync_020381165_1024.csv  gensync_022168024_1026.csv  gensync_081328890_1025.csv  gensync_151036073_1017.csv  gensync_180727249_1017_old.csv  gensync_203947479_1031.csv  gensync_403100722_1018_CPI_only.csv  gensync_413734283_1019_old.csv  gensync_464242008_1017_CPI_only.csv  gensync_613107517_1031_old.csv  gensync_716773447_1019.csv  gensync_775034327_1026.csv  gensync_830123777_1033_old.csv  gensync_849071254_1033.csv  gensync_863458421_1027.csv  gensync_909483837_1026_failed.csv  gensync_968760679_1018.csv  gensync_974396656_1018.csv  gensync_985751322_1017.csv
run/plain_data/network/benchmark_net_126889212_1018/: ping.txt
run/plain_data/network/benchmark_net_234425928_1033_ping/: ping.txt
run/plain_data/network/benchmark_net_332752883_1025_iperf/: iperf_client_to_server.json  iperf_server_to_client.json
run/plain_data/network/benchmark_net_377743642_1017/: ping.txt
run/plain_data/network/benchmark_net_529954676_1017/: iperf_client_to_server.json  iperf_server_to_client.json
run/plain_data/network/benchmark_net_546262693_1026_iperf/: iperf_client_to_server.json  iperf_server_to_client.json
run/plain_data/network/benchmark_net_567662399_1018/: iperf_client_to_server.json  iperf_server_to_client.json
run/plain_data/network/benchmark_net_836352367_1031_iperf/: iperf_client_to_server.json  iperf_server_to_client.json
run/plain_data/network/benchmark_net_904926021_1033_iperf/: iperf_client_to_server.json  iperf_server_to_client.json
run/plain_data/network/benchmark_net_913940501_1031_ping/: ping.txt
run/plain_data/network/benchmark_net_918629519_1025_ping/: ping.txt
run/plain_data/network/benchmark_net_957228509_1026_ping/: ping.txt
run/plain_data/network/udp/benchmark_net_020511352_1009/: iperf2_client.txt  iperf2_server.txt
run/plain_data/network/udp/benchmark_net_020550482_1009/: iperf3_server_logs.json  iperf3_server_to_client.json
run/plain_data/network/udp/benchmark_net_024438256_1018/: iperf2_client.txt  iperf2_server.txt
run/plain_data/network/udp/benchmark_net_025135277_1017/: iperf2_client.txt  iperf2_server.txt
run/plain_data/network/udp/benchmark_net_025790595_1019/: iperf2_client.txt  iperf2_server.txt
run/plain_data/network/udp/benchmark_net_026274821_1019/: iperf3_server_logs.json  iperf3_server_to_client.json
run/plain_data/network/udp/benchmark_net_027469764_1018/: iperf3_server_logs.json  iperf3_server_to_client.json
run/plain_data/network/udp/benchmark_net_044851633_1031/: iperf2_client.txt  (+1 more)
scripts/: OBSERVS_collection_32_512_6.csv  OBSERVS_collection_64_1024_8.csv  OBSERVS_collection_64_512_8.csv  data_collection.py  requirements.txt  run100.sh
scripts/network_cpu_variations/: client_params_data.cpisync  client_params_data_CPISync_optimal.cpisync  client_params_data_IBLTSync.cpisync  client_params_data_IBLTSync_optimal.cpisync  count_common.py  extract_data.py  run_experiments.sh  server_params_data.cpisync  server_params_data_CPISync_optimal.cpisync  server_params_data_IBLTSync.cpisync  server_params_data_IBLTSync_optimal.cpisync  viz.py
src/: TryMe.cpp  main.cpp
src/Aux/: Logger.cpp  Sketches.cpp  SyncMethod.cpp  UID.cpp
src/Benchmarks/: AuxMeasurements.cpp  BenchObserv.cpp  BenchParams.cpp  FromFileGen.cpp  Runner.cpp
src/Communicants/: CommDummy.cpp  CommSocket.cpp  CommString.cpp  Communicant.cpp
src/Data/: DataObject.cpp
src/Syncs/: CPISync.cpp  Compact2DBitArray.cpp  Cuckoo.cpp  CuckooSync.cpp  FullSync.cpp  GenSync.cpp  HashSync.cpp  IBLT.cpp  IBLTMultiset.cpp  IBLTSetOfSets.cpp  IBLTSync.cpp  IBLTSync_Multiset.cpp  InterCPISync.cpp  probCPISync.cpp
src/Tools/: EncodeJoin.cpp
tests/unit/: CuckooSyncTest.cpp  CuckooSyncTest.h
(+28 files in other folders)
